--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : simple site
+title : BEDENet
 author :
   name : Matthew Aiello-Lammens
   email : matt.lammens@gmail.com
